fixed message icon on desktop

--- a/step7/assets/styles.css
+++ b/step7/assets/styles.css
@@ -168,4 +168,12 @@
     display: flex;
     margin-top: 35%;
   }
+
+  .footer span{
+    font-size: 16px;
+  }
+
+  .comment-image {
+    margin-left: 200px;
+  }
 }
